maxLevel option (zero-based value, where zero indicates the first level of the nested menu); Improvements in the layout of items and buttons

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -27,3 +27,6 @@
 .list-group-item {
   padding-right: 0px;
 }
+.list-group-item > .list-group > .list-group-item:first-child {
+  margin-top: 8px;
+}
